# Weerstation2425

./: CMakeLists.txt  Kconfig  README.md  README.rst  arduino_i2c.overlay  prj.conf
Qt_code/: CMakeLists.txt  graphview.cpp  graphview.h  graphview.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
boards/: nucleo_f091rc.overlay
include/: Weerstation.h
src/: main.c
